--- a/clean_rakna/pubspec.yaml
+++ b/clean_rakna/pubspec.yaml
@@ -2,7 +2,7 @@ name: clean_rakna
 description: "A new Flutter project."
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-version: 1.0.2+1
+version: 1.0.3+1
 environment:
   sdk: ^3.5.1
 
@@ -26,6 +26,7 @@ dependencies:
   flutter_facebook_auth: ^7.1.1
   flutter_launcher_icons: ^0.13.1
   flutter_localization: ^0.2.2
+  flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
   gap: ^3.0.1
   geolocator: ^13.0.1
